--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
       alert("Se ha creado el usuario")
     }else{
       alert("Las contraseñas no coinciden. Vuelve a introducir los datos.")
-      
+
     }
   }
   </script>
@@ -40,10 +40,10 @@
       <div class="navbar-collapse collapse" id="bs-navbar">
         <ul class="nav navbar-nav">
           <li>
-            <a class="page-scroll" href="./index.html">HOME</a>
+            <a class="page-scroll" href="./index.php">HOME</a>
           </li>
           <li>
-            <a class="page-scroll" href="./index.html#two">JUEGOS</a>
+            <a class="page-scroll" href="./index.php#two">JUEGOS</a>
           </li>
           <li>
             <a class="page-scroll" href="#three">TRAILERS</a>
