--- a/login.html
+++ b/login.html
@@ -28,16 +28,16 @@
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="./index.html">HOME</a>
+                        <a class="page-scroll" href="./index.php">HOME</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="./index.html#two">JUEGOS</a>
+                        <a class="page-scroll" href="./index.php#two">JUEGOS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="./index.html#three">TRAILERS</a>
+                        <a class="page-scroll" href="./index.php#three">TRAILERS</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="./index.html#last">CONTACTO</a>
+                        <a class="page-scroll" href="./index.php#last">CONTACTO</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
